--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
           <textarea id="noteContent" class="form-textarea" placeholder="Write your note here..." required></textarea>
         </div>
 
+        <div class="form-group">
+          <label for="noteColor" class="form-label">Note Color</label>
+          <input type="color" id="noteColor" class="form-color" value="#ffffff">
+        </div>
+
         <div class="dialog-actions">
           <button type="button" class="cancel-btn" onclick="closeNoteDialog()">Cancel</button>
           <button type="submit" class="save-btn">Save Note</button>
